<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diygreen.andoid4.SwicthDemoActivity">
    <TextView
        android:id="@+id/tv_switchintroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_introduce"/>
    <Switch
        android:id="@+id/switch_test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_switchintroduce"
        android:textOn="@string/switch_on_chinese"
        android:textOff="@string/switch_off_chinese"/>
    <Switch
        android:id="@+id/switch_test2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/switch_test1"
        android:textOn="@string/switch_on_english"
        android:textOff="@string/switch_off_english"/>
    <Switch
        android:id="@+id/switch_custom"
        android:layout_width="104dp"
        android:layout_height="62dp"
        android:switchMinWidth="100dp"
        android:minHeight="40dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/switch_test2"
        android:textOn="@string/switch_on_chinese"
        android:textOff="@string/switch_off_chinese"
        style="@style/custom_switch"/>

    <ImageView
        android:id="@+id/iv_switch_nheritance"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/switch_custom"
        android:src="@mipmap/img_switch_inheritance" />
</RelativeLayout>
