<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_gridlayoutintroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gridlayout_introduce"
        android:textAllCaps="false"/>
    <TextView
        android:id="@+id/tv_gridlayout_strategyintroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/gridlayout_strategy_introduce"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_slide_tip"
        android:textAllCaps="false"/>
</LinearLayout>