<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diygreen.andoid4.TextureViewDemoActivity">
    <TextView
        android:id="@+id/tv_alphavalue_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_alphavalue_tip"/>
    <Spinner
        android:id="@+id/sp_setalphavalue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_alphavalue_tip" />
    <TextView
        android:id="@+id/tv_rotationvalue_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/sp_setalphavalue"
        android:text="@string/text_rotationvalue_tip"/>
    <Spinner
        android:id="@+id/sp_setrotationvalue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_rotationvalue_tip" />

    <TextureView
        android:id="@+id/ttv_test"
        android:layout_below="@id/sp_setrotationvalue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/tv_textureviewintroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_textureview_introduce"
        android:background="#55ffffff"/>
</RelativeLayout>
